--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,18 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
+@font-face {
+  font-family: 'Cutive';
+  src: url('/fonts/CutiveRegular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -22,3 +34,4 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
