--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,36 @@
   }
 }
 
+@keyframes noise {
+  0% { transform: translate(0,0); }
+  10% { transform: translate(-5%,-5%); }
+  20% { transform: translate(-10%,5%); }
+  30% { transform: translate(5%,-10%); }
+  40% { transform: translate(-5%,15%); }
+  50% { transform: translate(-10%,5%); }
+  60% { transform: translate(15%,0); }
+  70% { transform: translate(0,10%); }
+  80% { transform: translate(-15%,0); }
+  90% { transform: translate(10%,5%); }
+  100% { transform: translate(5%,0); }
+}
+
+.grain-background::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none; /* Ensures it doesn’t interfere with clicks */
+  background: rgba(0, 0, 0, 0.1); /* Adjust transparency */
+  animation: noise 8s steps(10) infinite;
+  z-index: 9999; /* Make sure it's above everything */
+}
+
+
+
+
 html {
   scroll-behavior: smooth;
 }
@@ -24,6 +54,16 @@ html {
   src: url('/fonts/CutiveRegular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+}
+
+/*! Targets menu cards titles: */
+.MuiCardHeader-title {
+  font-family: 'Cutive', serif
+}
+/*! Targets menu cards outter background: */
+.MuiPaper-root.MuiCard-root {
+  background-color: #241f21;
+  color: white
 }
 
 body {
